# xacc-vqe-bayesopt

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
backend/: BayesOptActivator.cpp  BayesOptVQEBackend.cpp  BayesOptVQEBackend.hpp  CMakeLists.txt  manifest.json
backend/tests/: BayesOptVQEBackendTester.cpp  CMakeLists.txt
python/: CMakeLists.txt  xacc-vqe-fcidump.py
